@@ -62,6 +62,7 @@
     <!-- autocommit pending docs if certain criteria are met 
     <autoCommit> 
       <maxDocs>10000</maxDocs>
+      <maxTime>1000</maxTime>
     </autoCommit>
     -->
 
